# ReserveL

./: .gitignore  LICENSE  README.md  SADAKAT_TOKEN_SISTEMI.md
app/: README.md  package-lock.json  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/notifications/: route.ts
app/src/app/api/reservations/: route.ts
app/src/app/api/reservations/[id]/: route.ts
app/src/app/api/reservations/cancel-confirmed/: route.ts
app/src/app/api/reservations/confirm-pending/: route.ts
app/src/app/api/reservations/confirm-reservation/: route.ts
app/src/app/api/reservations/update-attendance/: route.ts
app/src/app/api/stellar/confirm-payment/: route.ts
app/src/app/api/stellar/issue-loyalty/: route.ts
app/src/app/business-dashboard/: page.tsx
app/src/app/confirm/[token]/: page.tsx
app/src/app/confirm/success/: page.tsx
app/src/app/customer-confirm/[id]/: page.tsx
app/src/app/customer-page/: page.tsx
app/src/components/business/: NoteEditor.tsx  ReservationCard.tsx  ReservationForm.tsx  ReservationList.tsx  ReservationStats.tsx  useReservations.ts
app/src/components/customer/: ConfirmationDetails.tsx  PaymentSection.tsx
app/src/components/ui/: Button.tsx  Input.tsx
app/src/contracts/: contractActions.ts
app/src/lib/: db.ts  passkey.ts  soroban.ts  stellar.ts  utils.ts  wallet.ts
app/src/types/: Reservation.ts  freighter.d.ts
contracts/: Cargo.toml  README.md  Xargo.toml
contracts/.stellar/contract-ids/: reservel_contract.json
contracts/.stellar/identity/: test1.toml
contracts/src/: lib.rs
(+2 files in other folders)
